testing on going

--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ NODE_ENV=development
 DATABASE_NAME=warehouse
 DATABASE_USER=developer
 DATABASE_PASSWORD=q1w2e3r4t5
+CASH_IN=http://private-38e18c-uzduotis.apiary-mock.com/config/cash-in
+CASH_OUT_NATURAL=http://private-38e18c-uzduotis.apiary-mock.com/config/cash-out/natural 
+CASH_OUT_JURIDICAL=http://private-38e18c-uzduotis.apiary-mock.com/config/cash-out/juridical 
