--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,6 @@
 DATABASE_NAME = warehouse
 DATABASE_USER = developer
 DATABASE_PASSWORD = q1w2e3r4t5
+CASH_IN=http://private-38e18c-uzduotis.apiary-mock.com/config/cash-in
+CASH_OUT_NATURAL=http://private-38e18c-uzduotis.apiary-mock.com/config/cash-out/natural 
+CASH_OUT_JURIDICAL=http://private-38e18c-uzduotis.apiary-mock.com/config/cash-out/juridical 
