--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "This a quick start pack for typescript express application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --require ts-node/register --watch-extensions ts 'src/test/**/*.spc.ts'",
     "start": "nodemon ./dist/app.js"
   },
   "author": "Md. Tariqul Islam Shuvo",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -17,10 +18,16 @@
     "mongoose": "^5.12.2"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/chai": "^4.3.1",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
+    "@types/mocha": "^9.1.1",
     "@types/mongoose": "^5.10.4",
     "@types/node": "^14.14.37",
-    "nodemon": "^2.0.7"
+    "chai": "^4.3.6",
+    "mocha": "^10.0.0",
+    "nodemon": "^2.0.7",
+    "ts-node": "^10.9.1"
   }
 }
