--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha --require ts-node/register --watch-extensions ts 'src/test/**/*.spc.ts'",
-    "start": "nodemon ./dist/app.js"
+    "start": "nodemon ./dist/app.js input.json"
   },
   "author": "Md. Tariqul Islam Shuvo",
   "license": "ISC",
