--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.10.0",
+    "moment": "^2.29.4",
     "mongoose": "^5.12.2"
   },
   "devDependencies": {
@@ -23,6 +24,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
     "@types/mocha": "^9.1.1",
+    "@types/moment": "^2.13.0",
     "@types/mongoose": "^5.10.4",
     "@types/node": "^14.14.37",
     "chai": "^4.3.6",
